# api/api.go
@@ -55,7 +55,6 @@ func New(opt *RouterOptions) *gin.Engine {
 	apiV1.POST("/urls/make-short-url", handlerV1.AuthMiddleware, handlerV1.MakeShortUrl)
 	apiV1.GET("/urls/:shorturl", handlerV1.RedirectUrl)
 
-	apiV1.GET("/urls/:id", handlerV1.AuthMiddleware, handlerV1.GetUrl)
 	apiV1.PUT("/urls/:id", handlerV1.AuthMiddleware, handlerV1.UpdateUrl)
 	apiV1.DELETE("/urls/:id", handlerV1.AuthMiddleware, handlerV1.DeleteUrl)
 
